# crossbridge

./: .coverage  .dockerignore  .editorconfig  .env  .env.docker.example  .env.example  .env.local.example  .env.production.example  .gitignore  .gitignore_org  AI_IMPLEMENTATION_COMPLETE.md  AI_SUMMARY_IMPLEMENTATION.md  AI_TRANSFORMATION_SUMMARY.md  AUTHORS.md  AUTOMATIC_HOOKS_IMPLEMENTATION_COMPLETE.md  BEHAVIORAL_COVERAGE_SUMMARY.md  Behave_Cypress_Testng_Full_Log_Analyze.20260215_132547.json  Behave_Cypress_Testng_Full_Log_Analyze.20260215_143301.json  Behave_Cypress_Testng_Full_Log_Analyze.20260215_143433.json  Behave_Cypress_Testng_Full_Log_Analyze.20260215_230335.json  Behave_Cypress_Testng_Full_Log_Analyze.20260216_002332.json  Behave_Cypress_Testng_Full_Log_Analyze.20260216_002604.json  Behave_Cypress_Testng_Full_Log_Analyze.20260216_002611.json  Behave_Cypress_Testng_Full_Log_Analyze.20260216_003032.json  Behave_Cypress_Testng_Full_Log_Analyze.20260216_003039.json  Behave_Cypress_Testng_Full_Log_Analyze.20260216_003700.json  Behave_Cypress_Testng_Full_Log_Analyze.20260216_003708.json  Behave_Cypress_Testng_Full_Log_Analyze.20260216_004100.json  CHATGPT_REVIEW_IMPLEMENTATION.md  COMMON_INFRASTRUCTURE.md  CONFIG_AS_DEFAULTS_GUIDE.md  CONFIG_DRIVEN_PROFILING.md  CONFIG_QUICK_REFERENCE.md  CONTINUOUS_INTELLIGENCE_README.md  CONTRIBUTING.md  COVERAGE_QUICK_REFERENCE.md  CUCUMBER_JSON_PARSER_COMPLETE.md  CUCUMBER_PARSER_QUICK_REF.md  DATABASE_DEPLOYMENT_SUMMARY.md  Dockerfile  (+118 more)
.ci/: CICD_INTEGRATION_EXAMPLES.md  test-configuration.yml
cli/: app.py  branding.py  errors.py  main.py  progress.py  prompts.py  semantic_search.py
core/: __init__.py
docs/: AI_MODULE_SUMMARY.md  AI_NO_AI_MODES.md  AI_POWERED_TEST_GENERATION.md  AI_POWERED_TEST_GENERATION_SUMMARY.md  AI_SETUP.md  AI_SKILLS_SUMMARY.md  BDD_EXPANSION_IMPLEMENTATION.md  BDD_EXPANSION_QUICK_REF.md  CONFIDENCE_DRIFT_DETECTION.md  CONTINUOUS_INTELLIGENCE_GUIDE.md  COVERAGE_MAPPING.md  DOCKER_17POINT_REVIEW.md  DOCKER_GUIDE.md  DOCUMENTATION_ORGANIZATION_GUIDE.md  DRIFT_POSTGRESQL_SETUP.md  DUAL_TARGET_MIGRATION.md  DUAL_TARGET_SUMMARY.md  EXECUTION_INTELLIGENCE.md  EXECUTION_INTELLIGENCE_CI_INTEGRATION.md  EXECUTION_ORCHESTRATION.md  EXECUTION_ORCHESTRATION_17POINT_REVIEW.md  EXECUTION_ORCHESTRATION_COMPLETE.md  EXPLAINABILITY_SYSTEM.md  FINAL_DELIVERY_REPORT.md  FLAKY_DETECTION_IMPLEMENTATION.md  FLAKY_DETECTION_PHASE2.md  FLAKY_DETECTION_PHASE2_COMPLETE.md  FLAKY_DETECTION_QUICKSTART.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTALLATION.md  LLM_INTEGRATION_SUMMARY.md  LOGGING_IMPLEMENTATION_SUMMARY.md  LOG_PARSER_TESTING_GUIDE.md  MAPPING_IMPLEMENTATION_SUMMARY.md  MEMORY_EMBEDDINGS_SYSTEM.md  MEMORY_INTEGRATION_QUICK_START.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  (+31 more)
examples/: ActiveDirectorySteps.robot  BITBUCKET_DEMO_README.md  BITBUCKET_REPO_TOKEN_GUIDE.md  QUICK_START.md  TFS_MIGRATION_GUIDE.md  ai_demo.py  ai_test_generation_demo.py  ai_transformation_examples.py  batch_orchestration_demo.py  bdd_expansion_demo.py  bdd_integration_examples.py  cli_config_integration.py  cli_mapping_demo.py  complete_integration_example.py  crossbridge_cucumber_integration.py  cucumber_json_parser_demo.py  flaky_detection_demo.py  governance_demo.py  llm_integration_quick_ref.py  logging_config_examples.py  logging_demo.py  logging_quickstart.py  mapping_demo.py  mcp_usage_example.py  plugin_architecture_example.py  production_hardening_example.py  restassured_to_robot_example.py  result_collection_demo.py  runtime_integration_examples.py  sample-cucumber-report.json  semantic_search_examples.py  sidecar_examples.py  skills_quick_demo.py  skills_usage_demo.py  verify_cucumber_parser.py
governance_reports/: demo_report.json  demo_report.md
grafana/: AI_DASHBOARD_README.md  API_CHANGE_DASHBOARD_SETUP.md  DASHBOARD_DATA_POPULATION.md  DASHBOARD_FIX_SUMMARY.md  GRAFANA_DASHBOARD_PACKAGE.md  GRAFANA_SETUP_GUIDE.md  QUICK_START.md  QUICK_START_API_DASHBOARD.md  README_DASHBOARD.md  TROUBLESHOOTING.md  ai_intelligence_dashboard.json  dashboard_complete.json  execution_intelligence_dashboard.json  flaky_dashboard_ready_template.json  performance_profiling_dashboard.json  setup_grafana.sh  test_execution_trends_dashboard.json
hooks/: __init__.py  playwright_hooks.py  pytest_hooks.py  pytest_intelligence_plugin.py  robot_hooks.py
listeners/: README.md  setup.py
migration/: execution.py  extract.py  orchestrator.py  refinement.py  run_embedding_reliability_migration.py  validation.py
persistence/: README.md  __init__.py  base.py  db.py  models.py  orchestrator.py  schema.py  schema.sql  schema_ai_extensions.sql
scripts/: README.md  analyze_test_schema.py  apply_coverage_schema.py  apply_coverage_schema_only.py  check_change_event.py  check_db_schema.py  check_test_identifiers.py  comprehensive_schema.sql  comprehensive_schema_basic.sql  comprehensive_schema_pgvector_only.sql  enable_api_change_intelligence.py  generate_diverse_embeddings.py  generate_embeddings.py  generate_embeddings_with_dates.py  generate_implementation_analysis.py  install.ps1  (+23 more)
(+1202 files in other folders)
