[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crossbridge"
version = "0.1.1"
description = "AI-powered test automation transformation platform by CrossStack AI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CrossStack AI", email = "vikas.sdet@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "tabulate>=0.9.0",
    "PyYAML>=6.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    "pgvector>=0.2.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
include = ["cli*", "core*", "adapters*", "migration*", "persistence*", "common*", "services*", "listeners*", "hooks*", "monitoring*", "search*"]

[project.optional-dependencies]
sidecar = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "faiss-cpu>=1.7.4",
]
frameworks = [
    "playwright>=1.40.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
all = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "faiss-cpu>=1.7.4",
    "playwright>=1.40.0",
]

[project.scripts]
crossbridge = "cli.app:main"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
